created basic structure

--- a/index.html
+++ b/index.html
@@ -9,5 +9,21 @@
     <![endif]-->
     <link href='assets/stylesheets/screen.css' rel='stylesheet'>
   </head>
-  <body></body>
+  <body>
+    <!-- HEADER -->
+    <header class='l-header'></header>
+    <!-- MAIN -->
+    <section>
+      <div class='l-main'></div>
+    </section>
+    <!-- FOOTER -->
+    <footer class='l-footer'></footer>
+    <!-- JQuery -->
+    <script src='http://code.jquery.com/jquery-2.0.3.min.js'></script>
+    <!-- Bootstrap -->
+    <!-- If you are using Bootstrap, uncomment the line below -->
+    <script src='js/bootstrap/bootstrap.min.js'></script>
+    <!-- Main -->
+    <script src='js/script.js'></script>
+  </body>
 </html>
