changed title README.md

--- a/README.html
+++ b/README.html
@@ -1,5 +1,3 @@
-<h1>Landing page</h1>
+<h1>Landing page Exercise</h1>
 
-<p>Página de prueba creada para repasar Sass y SMACSS. Inspirada en el framework de Adi Purdila de Tuts+
-https://tutsplus.com/course/web-design-workflow-with-sass-and-compass/
-</p>
+<p>Simple CSS framework created to practice SASS and SMACSS. Inspired by Adi Purdila&rsquo;s screencasts (https://tutsplus.com/course/web-design-workflow-with-sass-and-compass/).</p>
