created HTML header and main

--- a/index.html
+++ b/index.html
@@ -3,18 +3,62 @@
   <head>
     <meta charset='utf-8'>
     <meta content='width=device-width' name='viewport'>
-    <title>Redradix</title>
+    <title>Landing Page</title>
     <!--[if lt IE 9]>
       <script src='assets/javascripts/dependencies/html5shiv.js'></script>
     <![endif]-->
-    <link href='assets/stylesheets/screen.css' rel='stylesheet'>
+    <link href='stylesheets/screen.css' rel='stylesheet'>
   </head>
   <body>
     <!-- HEADER -->
-    <header class='l-header'></header>
+    <header class='l-header l-beveled'>
+      <div class='container'>
+        <div class='row'>
+          <div class='col-lg-3'>
+            <h1 class='logo'>
+              <a href='index.html'>Landing Page</a>
+            </h1>
+          </div>
+          <div class='col-lg-9'>
+            <ul class='align-right l-list-divided'>
+              <li id='contact-info'>
+                <p>
+                  <small>Questions?</small>
+                </p>
+                <p>Call 1-800-0000</p>
+              </li>
+              <li>
+                <button class='btn.btn-primary' type='button'>Buy Now</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
     <!-- MAIN -->
     <section>
-      <div class='l-main'></div>
+      <div class='t-main-banner t-margin' id='main-banner'>
+        <div class='container'>
+          <div class='row'>
+            <div class='col-lg-5'>
+              <img alt='iphone' class='l-featured-image' src='images/iphone.png'>
+            </div>
+            <div class='col-lg-7'>
+              <h1>Product Name</h1>
+              <h3>This is a product tagline</h3>
+              <button class='btn' type='button'>Buy Now</button>
+              <button class='btn' type='button'>Try it free</button>
+              <hr>
+              <a href=''>
+                <img alt='video' src='images/video-1.png'>
+              </a>
+              <a href=''>
+                <img alt='video' src='images/video-2.png'>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- FOOTER -->
     <footer class='l-footer'></footer>
