created all HTML structure

--- a/index.html
+++ b/index.html
@@ -60,8 +60,116 @@
         </div>
       </div>
     </section>
+    <!-- TESTIMONIALS -->
+    <section>
+      <div class='container t-margin'>
+        <div class='row'>
+          <div class='col-lg-4'>
+            <blockquote>
+              <p>lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, similique, eaque, at praesentium ut nostrum excepturi quisquam minima quam numquam vel doloremque ipsum tempore consequuntur delectus minus molestiae magni alias!</p>
+              <cite>Sara Moreno, creadora de este tema</cite>
+            </blockquote>
+          </div>
+          <div class='col-lg-4'>
+            <blockquote>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, aspernatur, omnis at quo modi laudantium eius eveniet ratione commodi non vero itaque repudiandae asperiores ea beatae culpa nobis dolorum ducimus.</p>
+              <cite>Sara Moreno, creadora de este tema</cite>
+            </blockquote>
+          </div>
+          <div class='col-lg-4'>
+            <blockquote>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, aspernatur, omnis at quo modi laudantium eius eveniet ratione commodi non vero itaque repudiandae asperiores ea beatae culpa nobis dolorum ducimus.</p>
+              <cite>Sara Moreno, creadora de este tema</cite>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr>
+    <!-- /FEATURES -->
+    <section>
+      <div class='container t-margin'>
+        <header class='text-center t-margin'>
+          <h2>For just 10$ you'll get an awesome product</h2>
+          <h3>Here is some of its main features</h3>
+        </header>
+        <ul class='row l-list-unstyled'>
+          <li class='col-lg-6'>
+            <div class='l-image-well text-center'>
+              <img alt='feature' src='images/icons/icon-1.png'>
+            </div>
+            <div class='l-text-well'>
+              <strong>Title of feature</strong>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, perferendis, cumque, iusto, sit quae facere esse nostrum reiciendis sequi eaque hic rerum incidunt minus at saepe deleniti cupiditate? Libero, magnam.</p>
+            </div>
+          </li>
+          <li class='col-lg-6'>
+            <div class='l-image-well text-center'>
+              <img alt='feature' src='images/icons/icon-2.png'>
+            </div>
+            <div class='l-text-well'>
+              <strong>Title of feature</strong>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, perferendis, cumque, iusto, sit quae facere esse nostrum reiciendis sequi eaque hic rerum incidunt minus at saepe deleniti cupiditate? Libero, magnam.</p>
+            </div>
+          </li>
+        </ul>
+        <ul class='row l-list-unstyled'>
+          <li class='col-lg-6'>
+            <div class='l-image-well text-center'>
+              <img alt='feature' src='images/icons/icon-3.png'>
+            </div>
+            <div class='l-text-well'>
+              <strong>Title of feature</strong>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, perferendis, cumque, iusto, sit quae facere esse nostrum reiciendis sequi eaque hic rerum incidunt minus at saepe deleniti cupiditate? Libero, magnam.</p>
+            </div>
+          </li>
+          <li class='col-lg-6'>
+            <div class='l-image-well text-center'>
+              <img alt='feature' src='images/icons/icon-4.png'>
+            </div>
+            <div class='l-text-well'>
+              <strong>Title of feature</strong>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, perferendis, cumque, iusto, sit quae facere esse nostrum reiciendis sequi eaque hic rerum incidunt minus at saepe deleniti cupiditate? Libero, magnam.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- /CALL TO ACTION -->
+    <section>
+      <div class='container t-margin l-callout clearfix'>
+        <div class='row col-lg-8'>
+          <h2>Buy niw or try it free. It's super easy to start</h2>
+          <h3>No credit card required for free trial</h3>
+        </div>
+        <div class='col-lg-4 text-right'>
+          <button class='btn' type='button'>Buy Now</button>
+          <button class='btn' type='button'>Try it free</button>
+        </div>
+      </div>
+    </section>
+    <hr>
     <!-- FOOTER -->
-    <footer class='l-footer'></footer>
+    <footer class='l-footer container t-margin text-center'>
+      <ul class='l-list-inline t-margin'>
+        <li>
+          <a class='social-icon' href='#'>
+            <i class='fa fa-twitter'></i>
+          </a>
+        </li>
+        <li>
+          <a class='social-icon' href='#'>
+            <i class='fa fa-facebook'></i>
+          </a>
+        </li>
+        <li>
+          <a class='social-icon' href='#'>
+            <i class='fa fa-envelope'></i>
+          </a>
+        </li>
+      </ul>
+      <p>&copy; Copyright 2014 Product Name</p>
+    </footer>
     <!-- JQuery -->
     <script src='http://code.jquery.com/jquery-2.0.3.min.js'></script>
     <!-- Bootstrap -->
