added theme and final styles

--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
     </section>
     <!-- /CALL TO ACTION -->
     <section>
-      <div class='container t-margin l-callout clearfix'>
+      <div class='container t-margin t-callout clearfix'>
         <div class='row'>
           <div class='col-lg-8'>
             <h2>Buy niw or try it free. It's super easy to start</h2>
             <h3>No credit card required for free trial</h3>
           </div>
           <div class='col-lg-4 text-right'>
-            <button class='btn' type='button'>Buy Now</button>
+            <button class='btn btn-primary' type='button'>Buy Now</button>
             <button class='btn' type='button'>Try it free</button>
           </div>
         </div>
